src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__bit_count_bytes.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"bit_count\")]\nfn bit_count_bytes<'a>(a: &'a [u8]) -> Result<i64, EvalError> {\n    let count: u64 = a.iter().map(|b| u64::cast_from(b.count_ones())).sum();\n    i64::try_from(count)\n        .or_else(|_| Err(EvalError::Int64OutOfRange(count.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct BitCountBytes;
impl crate::func::EagerUnaryFunc for BitCountBytes {
    type Input<'a> = &'a [u8];
    type Output<'a> = Result<i64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        bit_count_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for BitCountBytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("bit_count")
    }
}
fn bit_count_bytes<'a>(a: &'a [u8]) -> Result<i64, EvalError> {
    let count: u64 = a.iter().map(|b| u64::cast_from(b.count_ones())).sum();
    i64::try_from(count)
        .or_else(|_| Err(EvalError::Int64OutOfRange(count.to_string().into())))
}
