src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__crc32_bytes.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"crc32_bytes\")]\nfn crc32_bytes(a: &ByteStr) -> u32 {\n    crc32fast::hash(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Crc32Bytes;
impl<'a> crate::func::EagerUnaryFunc<'a> for Crc32Bytes {
    type Input = &'a ByteStr;
    type Output = u32;
    fn call(&self, a: Self::Input) -> Self::Output {
        crc32_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Crc32Bytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("crc32_bytes")
    }
}
fn crc32_bytes(a: &ByteStr) -> u32 {
    crc32fast::hash(a)
}
