src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__crc32_string.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"crc32_string\")]\nfn crc32_string<'a>(a: &'a str) -> u32 {\n    crc32_bytes(a.as_bytes())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Crc32String;
impl crate::func::EagerUnaryFunc for Crc32String {
    type Input<'a> = &'a str;
    type Output<'a> = u32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        crc32_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Crc32String {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("crc32_string")
    }
}
fn crc32_string<'a>(a: &'a str) -> u32 {
    crc32_bytes(a.as_bytes())
}
