src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__kafka_murmur2_bytes.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"kafka_murmur2_bytes\")]\nfn kafka_murmur2_bytes(a: &ByteStr) -> i32 {\n    i32::from_ne_bytes(\n        (murmur2::murmur2(a.into(), murmur2::KAFKA_SEED) & 0x7fffffff).to_ne_bytes(),\n    )\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct KafkaMurmur2Bytes;
impl<'a> crate::func::EagerUnaryFunc<'a> for KafkaMurmur2Bytes {
    type Input = &'a ByteStr;
    type Output = i32;
    fn call(&self, a: Self::Input) -> Self::Output {
        kafka_murmur2_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for KafkaMurmur2Bytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("kafka_murmur2_bytes")
    }
}
fn kafka_murmur2_bytes(a: &ByteStr) -> i32 {
    i32::from_ne_bytes(
        (murmur2::murmur2(a.into(), murmur2::KAFKA_SEED) & 0x7fffffff).to_ne_bytes(),
    )
}
