src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__byte__seahash_bytes.snap
---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(sqlname = \"seahash_bytes\")]\nfn seahash_bytes(a: &ByteStr) -> u64 {\n    seahash::hash(a.into())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct SeahashBytes;
impl<'a> crate::func::EagerUnaryFunc<'a> for SeahashBytes {
    type Input = &'a ByteStr;
    type Output = u64;
    fn call(&self, a: Self::Input) -> Self::Output {
        seahash_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for SeahashBytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("seahash_bytes")
    }
}
fn seahash_bytes(a: &ByteStr) -> u64 {
    seahash::hash(a.into())
}
